# real-app

./: .env.example  Cargo.toml  README.md  docker-compose.yml
migrations/: 20230327060807_init.up.sql  20230328131105_init.up.sql
src/: controller.rs  handler.rs  main.rs  sub.rs
src/func/: controller.rs  env_config.rs  models.rs  routes.rs  sub.rs  user_routes.rs
src/lib/: config.rs
