[package]
name = "rust"
version = "0.1.0"
authors = ["imrany <imranmat254@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.26.0", features = ["full"] }
sqlx={version="0.6", features=["postgres", "runtime-tokio-rustls"]}
